--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,72 +2,56 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_margin="@dimen/activity_vertical_margin"
     android:layout_marginTop="?attr/actionBarSize"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    tools:context=".Main">
+
+    <TextView
+        android:id="@+id/serviceTime"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="5dp"
+        android:text="@string/service_time"
+        android:textSize="18sp" />
 
     <Spinner
-        android:id="@+id/spinner1"
+        android:id="@+id/spinner"
+        android:layout_below="@id/serviceTime"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="20dp"
         android:layout_marginTop="5dp" />
 
-    <Button
-        android:id="@+id/datepicker"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/spinner1"
-        android:background="@drawable/mybutton"
-        android:text="Draft Date"
-        android:textColor="@color/white" />
+    <!--<Button-->
+    <!--android:id="@+id/datePicker"-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:layout_below="@id/spinner"-->
+    <!--android:background="@drawable/mybutton"-->
+    <!--android:text="@string/draft_date"-->
+    <!--android:textColor="@color/white"-->
+    <!--android:layout_marginTop="5dp"/>-->
 
     <TextView
-        android:id="@+id/releasedate"
+        android:id="@+id/draftDate"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/datepicker"
-        android:layout_marginTop="@dimen/activity_vertical_margin"
-        android:text="Release Date: " />
+        android:layout_below="@id/spinner"
+        android:layout_marginStart="5dp"
+        android:text="@string/draft_date"
+        android:textSize="18sp" />
 
-    <TextView
-        android:id="@+id/daysleft"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/releasedate"
-        android:text="Service Days: " />
-
-    <TextView
-        android:id="@+id/count"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/daysleft"
-        android:text="Days Left: " />
-
-    <TextView
-        android:id="@+id/served"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/count"
-        android:text="Days Served: " />
-
-    <TextView
-        android:id="@+id/progress"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/served"
-        android:text="Progress: " />
-    <ProgressBar
-        android:id="@+id/progressBar"
-        style="?android:attr/progressBarStyleHorizontal"
-        android:layout_width="250dp"
-        android:layout_height="250dp"
-        android:layout_below="@id/progress"
+    <DatePicker
+        android:id="@+id/datePicker"
         android:layout_centerInParent="true"
-        android:indeterminate="false"
-        android:max="100"
-        android:progress="50"
-        android:progressDrawable="@drawable/circular"
-        android:secondaryProgress="100" />
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/draftDate"
+        android:layout_margin="@dimen/text_margin_small"
+        android:background="@drawable/mybutton"
+        android:datePickerMode="calendar"
+        android:elevation="@dimen/text_margin_very_small" />
 
 </RelativeLayout>
