--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -25,10 +25,11 @@
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
-    <style name="NumberPickerStyle">
-        <item name="android:textSize">22sp</item>
-        <item name="android:textColorPrimary">@color/colorAccent</item>
-        <item name="android:colorControlNormal">@color/colorAccent</item>
+    <style name="LinearProgress" parent="android:Widget.ProgressBar.Horizontal">
+        <item name="colorAccent">@color/red</item>
+        <item name="android:progressBackgroundTint">@color/colorButton</item>
+        <item name="android:minHeight">50dp</item>
+        <item name="android:maxHeight">200dp</item>
     </style>
 
 </resources>
