--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -30,6 +30,25 @@
         <item name="android:progressBackgroundTint">@color/colorButton</item>
         <item name="android:minHeight">50dp</item>
         <item name="android:maxHeight">200dp</item>
+        <item name="android:maxWidth">200dp</item>
+        <item name="android:minWidth">50dp</item>
+
     </style>
 
+    <style name="dividerBase">
+        <item name="android:background">?android:attr/listDivider</item>
+        //you can give your color here. that will change all divider color in your app.
+    </style>
+
+    <style name="dividerHorizontal" parent="dividerBase">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">1dp</item>
+        // You can change thickness here.
+
+    </style>
+
+    <style name="dividerVertical" parent="dividerBase">
+        <item name="android:layout_width">2dp</item>
+        <item name="android:layout_height">match_parent</item>
+    </style>
 </resources>
