--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_margin="@dimen/activity_vertical_margin"
-    android:layout_marginTop="?attr/actionBarSize"
+    android:layout_marginTop="?android:attr/actionBarSize"
     android:orientation="vertical"
     tools:context=".Main">
 
