--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorAccent">#448AFF</color>
     <color name="red">#ff0900</color>
     <color name="colorButton">#4e4e4e</color>
     <color name="white">#ffffff</color>
@@ -10,4 +10,7 @@
     <color name="light_black">#504f4f</color>
     <color name="black">#000000</color>
     <color name="blue">#0737d4</color>
+
+    <color name="gray">#455A64</color>
+    <color name="yellow">#FFC107</color>
 </resources>
