--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,57 +1,68 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_margin="@dimen/activity_vertical_margin"
     android:layout_marginTop="?android:attr/actionBarSize"
     android:orientation="vertical"
+    android:id="@+id/coordinator"
     tools:context=".Main">
 
-    <TextView
-        android:id="@+id/serviceTime"
+    <RelativeLayout
+        android:id="@+id/relative"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="5dp"
-        android:text="@string/service_time"
-        android:textSize="18sp" />
+        android:layout_height="match_parent">
 
-    <Spinner
-        android:id="@+id/spinner"
-        android:layout_below="@id/serviceTime"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="20dp"
-        android:layout_marginTop="5dp" />
+        <TextView
+            android:id="@+id/serviceTime"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="5dp"
+            android:text="@string/service_time"
+            android:textSize="18sp" />
 
-    <!--<Button-->
-    <!--android:id="@+id/datePicker"-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:layout_below="@id/spinner"-->
-    <!--android:background="@drawable/mybutton"-->
-    <!--android:text="@string/draft_date"-->
-    <!--android:textColor="@color/white"-->
-    <!--android:layout_marginTop="5dp"/>-->
+        <Spinner
+            android:id="@+id/spinner"
+            android:layout_below="@id/serviceTime"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="20dp"
+            android:layout_marginTop="5dp" />
 
-    <TextView
-        android:id="@+id/draftDate"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/spinner"
-        android:layout_marginStart="5dp"
-        android:text="@string/draft_date"
-        android:textSize="18sp" />
+        <TextView
+            android:id="@+id/draftDate"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/spinner"
+            android:layout_marginStart="5dp"
+            android:text="@string/draft_date"
+            android:textSize="18sp" />
 
-    <DatePicker
-        android:id="@+id/datePicker"
-        android:layout_centerInParent="true"
+        <DatePicker
+            android:id="@+id/datePicker"
+            android:layout_centerInParent="true"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/draftDate"
+            android:layout_margin="@dimen/text_margin_small"
+            android:background="@drawable/mybutton"
+            android:datePickerMode="calendar"
+            android:elevation="@dimen/text_margin_very_small" />
+    </RelativeLayout>
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/floating"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/draftDate"
-        android:layout_margin="@dimen/text_margin_small"
-        android:background="@drawable/mybutton"
-        android:datePickerMode="calendar"
-        android:elevation="@dimen/text_margin_very_small" />
-
-</RelativeLayout>
+        android:layout_gravity="bottom|end"
+        android:layout_margin="10dp"
+        android:clickable="true"
+        android:focusable="true"
+        android:src="@drawable/ic_done"
+        android:visibility="invisible"
+        app:fabSize="normal"
+        app:layout_anchor="@id/relative"
+        app:layout_anchorGravity="bottom|end" />
+</android.support.design.widget.CoordinatorLayout>
