Color Changes and Working prototype
Signed-off-by: avi parshan <avi.pars@gmail.com>

--- a/app/src/main/res/layout/activity_results.xml
+++ b/app/src/main/res/layout/activity_results.xml
@@ -3,14 +3,22 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    android:padding="10dp"
-    android:layout_margin="@dimen/activity_vertical_margin"
-    android:layout_marginTop="?android:attr/actionBarSize"
     tools:context=".Results">
+
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/tool"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        app:title="@string/app_name"
+        app:titleTextColor="#ffffff"></android.support.v7.widget.Toolbar>
 
     <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
         android:id="@+id/card"
+        android:layout_below="@id/tool"
+        android:layout_margin="@dimen/activity_vertical_margin"
+        android:layout_marginTop="?attr/actionBarSize"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
@@ -41,6 +49,7 @@
                     android:layout_height="wrap_content"
                     android:gravity="center"
                     android:text="0"
+                    android:textColor="@color/white"
                     android:textSize="24sp" />
 
                 <TextView
@@ -49,6 +58,7 @@
                     android:layout_height="wrap_content"
                     android:gravity="center"
                     android:text="@string/days_left"
+                    android:textColor="@color/white"
                     android:textSize="16sp" />
 
             </LinearLayout>
@@ -67,6 +77,7 @@
                     android:layout_height="wrap_content"
                     android:gravity="center"
                     android:text="0"
+                    android:textColor="@color/white"
                     android:textSize="24sp" />
 
                 <TextView
@@ -75,6 +86,7 @@
                     android:layout_height="wrap_content"
                     android:gravity="center"
                     android:text="@string/percentage_of_service"
+                    android:textColor="@color/white"
                     android:textSize="16sp" />
             </LinearLayout>
 
@@ -92,6 +104,7 @@
                     android:layout_height="wrap_content"
                     android:gravity="center"
                     android:text="0"
+                    android:textColor="@color/white"
                     android:textSize="24sp" />
 
                 <TextView
@@ -100,6 +113,7 @@
                     android:layout_height="wrap_content"
                     android:gravity="center"
                     android:text="@string/pazam"
+                    android:textColor="@color/white"
                     android:textSize="16sp" />
             </LinearLayout>
         </LinearLayout>
@@ -109,6 +123,8 @@
 
     <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
         android:id="@+id/card2"
+        android:layout_margin="@dimen/activity_vertical_margin"
+        android:layout_marginTop="?attr/actionBarSize"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/card"
@@ -184,6 +200,8 @@
 
     <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
         android:id="@+id/card3"
+        android:layout_margin="@dimen/activity_vertical_margin"
+        android:layout_marginTop="?attr/actionBarSize"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/card2"
