--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,33 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/coordinator"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_margin="@dimen/activity_vertical_margin"
-    android:layout_marginTop="?android:attr/actionBarSize"
     android:orientation="vertical"
-    android:id="@+id/coordinator"
     tools:context=".Main">
+
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/tool"
+        android:layout_width="match_parent"
+        android:layout_height="?android:attr/actionBarSize"
+        android:layout_alignParentTop="true"
+        android:background="@android:color/transparent"
+        android:fitsSystemWindows="true"
+        app:popupTheme="@style/AppTheme.PopupOverlay"
+        app:title="@string/app_name"
+        app:titleTextColor="@color/white">
+
+    </android.support.v7.widget.Toolbar>
 
     <RelativeLayout
         android:id="@+id/relative"
+        android:layout_height="match_parent"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_margin="@dimen/activity_vertical_margin"
+        android:layout_marginTop="?android:attr/actionBarSize"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
         <TextView
             android:id="@+id/serviceTime"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="5dp"
+            android:layout_marginTop="50dp"
             android:text="@string/service_time"
+            android:textColor="@color/white"
             android:textSize="18sp" />
 
         <Spinner
             android:id="@+id/spinner"
-            android:layout_below="@id/serviceTime"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_below="@id/serviceTime"
             android:layout_marginBottom="20dp"
             android:layout_marginTop="5dp" />
 
@@ -38,16 +54,17 @@
             android:layout_below="@id/spinner"
             android:layout_marginStart="5dp"
             android:text="@string/draft_date"
+            android:textColor="@color/white"
             android:textSize="18sp" />
 
         <DatePicker
             android:id="@+id/datePicker"
-            android:layout_centerInParent="true"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/draftDate"
+            android:layout_centerInParent="true"
             android:layout_margin="@dimen/text_margin_small"
-            android:background="@drawable/mybutton"
+            android:background="@drawable/rounded_button"
             android:datePickerMode="calendar"
             android:elevation="@dimen/text_margin_very_small" />
     </RelativeLayout>
@@ -57,9 +74,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
-        android:layout_margin="10dp"
+        android:layout_margin="16dp"
         android:clickable="true"
         android:focusable="true"
+        android:padding="16dp"
         android:src="@drawable/ic_done"
         android:visibility="invisible"
         app:fabSize="normal"
