--- a/app/src/main/res/layout/activity_results.xml
+++ b/app/src/main/res/layout/activity_results.xml
@@ -223,4 +223,12 @@
             android:text="Stats"
             android:textSize="18sp" />
     </android.support.v7.widget.CardView>
+
+    <com.startapp.android.publish.ads.banner.Mrec
+        android:id="@+id/startAppMrec"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_below="@id/card3"
+        android:layout_centerHorizontal="true" />
 </RelativeLayout>
